# smile

./: .gitattributes  .gitignore  CHANGELOG.md  LISTING.txt  Makefile  Makefile.am  Makefile.config  README.md  _config.yml  canvas.html  configure.ac  genStage1.js  genStage12.js  genStage2.js  genStage3.js  genTemplate.js  index.md  instructions.txt  package-lock.json  package.json  smile.com  smile.lds  stage12.S  stage12.inc  stage3.S  stage4.c  template.txt
.github/: FUNDING.yml
_data/: home.yml
